<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.RegisterFragment"
    android:gravity="center"
    android:orientation="vertical">


    <EditText
        android:id="@+id/editTextRegisterId"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/editTextSetEmail"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextSetPassword"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextRepeatPassword"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/repeat_password"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegisterSignUp"
        android:layout_width="176dp"
        android:layout_height="82dp"
        android:layout_margin="10dp"
        android:text="@string/sign_up"
        android:background="@drawable/button_shape"
        android:shadowColor="@color/buttonShadowColor"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:textColor="@color/buttonTextColor"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegisterGoBack"
        android:layout_width="176dp"
        android:layout_height="82dp"
        android:text="@string/go_back"
        android:background="@drawable/button_shape"
        android:shadowColor="@color/buttonShadowColor"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:textColor="@color/buttonTextColor"/>

</LinearLayout>