<resources>
    <string name="app_name">Ecommerce App</string>
    <string name="title_activity_test">test</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="repeat_password">repeat password</string>
    <string name="go_back">go back</string>
    <string name="add_to_cart">add to cart</string>
    <string name="product_3">Product 3</string>
    <string name="product_2">Product 2</string>
    <string name="product_1">Product 1</string>
    <string name="about_app">About app</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque a dui sit amet lectus lacinia euismod vitae in sapien. In sit amet neque dignissim, vehicula felis in, rutrum leo. Suspendisse non risus sit amet risus vehicula tempus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aenean efficitur erat in leo finibus dignissim. Cras viverra rhoncus est, ut molestie lorem. Pellentesque sollicitudin posuere diam non mattis.</string>
    <string name="log_out">Log out</string>
    <string name="remove_from_cart">REMOVE</string>
    <string name="go_to_cart">Go to cart</string>
    <string name="buy">BUY</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="server_client_id">Web client 1</string>
    <string name="delete">Delete</string>
    <string name="username">username</string>
    <string name="my_orders">my orders</string>
    <string name="details">DETAILS</string>
    <string name="total_price">TOTAL PRICE</string>
    <string name="latest_orders">LATEST ORDERS</string>
    <string name="log_in_failed">INVALID USERNAME AND/OR PASSWORD!</string>
    <string name="error_registration">ERROR OCCURRED WHILE REGISTRATION!</string>
    <string name="change_password">change password</string>
    <string name="delete_account">delete account</string>
    <string name="about_app_text">Ecommerce app allows you to buy your favorite products online\n\nAuthor:\nJakub Stepien</string>

    <!--    registration-->
    <string name="passwords_not_equal">Passwords are not equal!</string>
    <string name="enter_passwords">Enter your password!</string>
    <string name="enter_email">Enter your email!</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="enter_username">Enter your username!</string>


    <string name="find_our_shops">find our shops</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>
    <string name="log_in_with_google">log in with google</string>
    <string name="product_not_found">product not found</string>
    <string name="not_found">not found</string>
    <string name="customer_not_found">customer not found</string>
    <string name="customer_not_found_id">-1</string>
    <string name="refresh_cart_list">Refresh cart list</string>
    <string name="enter_customer_id_whose_cart_to_be_deleted">Enter customer id whose cart to be deleted</string>
    <string name="delete_customer_cart">Delete customer cart</string>
    <string name="delete_all_carts">delete all carts</string>
    <string name="refresh_customer_list">Refresh customer list</string>
    <string name="get_customer">get customer</string>
    <string name="id">id</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="enter_customer_id">Enter customer ID</string>
    <string name="delete_customer">delete customer</string>
    <string name="delete_all_customers">delete all customers</string>
    <string name="refresh_order_list">Refresh order list</string>
    <string name="get_order_details">get order details</string>
    <string name="enter_order_id">Enter order ID</string>
    <string name="delete_order">delete order</string>
    <string name="delete_all_orders">delete all orders</string>
    <string name="enter_product_price">Enter product price</string>
    <string name="enter_product_description">Enter product description</string>
    <string name="add_product">Add product</string>
    <string name="enter_product_id">Enter product ID</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="update_product">update product</string>
    <string name="get_product">get product</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="description">description</string>
    <string name="delete_product">delete product</string>
    <string name="delete_all_products">delete all products</string>


</resources>