<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/logInFragment">

    <fragment
        android:id="@+id/productsFragment"
        android:name="pl.edu.uj.ecommerce.Fragments.ProductsFragment"
        android:label="fragment_products"
        tools:layout="@layout/fragment_products" >
        <action
            android:id="@+id/action_productsFragment_to_cartFragment"
            app:destination="@id/cartFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_productsFragment_to_logInFragment"
            app:destination="@id/logInFragment"
            app:enterAnim="@android:anim/fade_in"
...
            android:id="@+id/action_productsFragment_to_aboutAppFragment"
            app:destination="@id/aboutAppFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_productsFragment_to_updateCustomerFragment"
            app:destination="@id/updateCustomerFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_productsFragment_to_deleteAccountFragment"
            app:destination="@id/deleteAccountFragment"
            app:enterAnim="@android:anim/fade_in"
...
            android:id="@+id/action_logInFragment_to_productsFragment"
            app:destination="@id/productsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_logInFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_logInFragment_to_adminHomeFragment"
            app:destination="@id/adminHomeFragment"
            app:enterAnim="@android:anim/fade_in"
...
        android:id="@+id/cartFragment"
        android:name="pl.edu.uj.ecommerce.Fragments.CartFragment"
        android:label="fragment_cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_cartFragment_to_buyFragment"
            app:destination="@id/buyFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_cartFragment_to_productsFragment"
            app:destination="@id/productsFragment"
            app:enterAnim="@android:anim/fade_in"
...
