...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CartFragment">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonGoBack3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="30dp"
        android:layout_marginBottom="70dp"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonBuy"
        app:layout_constraintTop_toBottomOf="@+id/RecyclerViewCartList"
        android:background="@drawable/button_shape"
        android:shadowColor="@color/buttonShadowColor"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
...
